# bregextest

./: BRegexTest.sln  CMakeLists.txt
BRegexTest/: BRegexTest.vcxproj  BRegexTest.vcxproj.filters  CMakeLists.txt  Qt4VSPropertySheet.props  main.cpp  mainwnd.aps  mainwnd.cpp  mainwnd.h  mainwnd.rc  stdafx.h  texteditor.cpp  texteditor.h
BRegexTest/GeneratedFiles/: qrc_mainwnd.cpp
BRegexTest/GeneratedFiles/Debug/: moc_mainwnd.cpp  moc_texteditor.cpp
BRegexTest/GeneratedFiles/Release/: moc_mainwnd.cpp  moc_texteditor.cpp
